--- a/Resources/views/Fra/update.html.twig
+++ b/Resources/views/Fra/update.html.twig
@@ -15,7 +15,7 @@ file that was distributed with this source code.
     </div>
 {% endif %}
 
-<form novalidate action="{{ path('asbo_whoswho_fra_edit', {'slug': fra.slug}) }}" {{ form_enctype(form) }} method="POST">
+<form novalidate action="{{ path('asbo_whoswho_fra_update', {'slug': fra.slug}) }}" {{ form_enctype(form) }} method="POST">
     {{ form_rest(form) }}
     <input type="submit" value="Editer" class="btn btn-success" />
 </form>
