Fix missing rename

--- a/Resources/views/Email/create.html.twig
+++ b/Resources/views/Email/create.html.twig
@@ -17,5 +17,5 @@ file that was distributed with this source code.
 
 <form novalidate action="{{ path('asbo_whoswho_email_create', {'slug': fra.slug}) }}" {{ form_enctype(form) }} method="POST">
     {{ form_rest(form) }}
-    <input type="submit" value="Editer" class="btn btn-success" />
+    <input type="submit" value="Ajouter" class="btn btn-success" />
 </form>
